update terms and conditions

--- a/src/app/terms-conditions/terms-conditions.component.html
+++ b/src/app/terms-conditions/terms-conditions.component.html
@@ -56,114 +56,63 @@
 </header> 
  
 <main>
-    <div class="container">
+    <article class="container">
         <header>
             <h1>Terms and Conditions</h1>
         </header>
+        <section>
+            <p>
+                THESE POSLITE INC, TERMS & CONDITIONS (“Agreement” or “Terms”) GOVERN YOUR ACQUISITION AND USE OF POSLITE SOFTWARE. BY ACCEPTING THIS AGREEMENT, EITHER BY CHECKING A BOX INDICATING YOUR ACCEPTANCE OR BY USING POSLITE SOFTWARE YOU AGREE TO THE TERMS OF THIS AGREEMENT AND THESE TERMS WILL THEN APPLY TO YOU FROM THE TIME THAT YOU FIRST ACCESS THE SERVICES IF YOU ARE ENTERING INTO THIS AGREEMENT ON BEHALF OF A COMPANY OR OTHER LEGAL ENTITY, YOU REPRESENT THAT YOU HAVE THE AUTHORITY TO BIND SUCH AN ENTITY AND ITS AFFILIATES TO THESE TERMS, IN WHICH CASE THE TERMS “YOU” OR “YOUR” SHALL REFER TO SUCH ENTITY AND ITS AFFILIATES. IF YOU DO NOT HAVE SUCH AUTHORITY, OR IF YOU DO NOT AGREE WITH THESE TERMS, YOU MUST NOT ACCEPT THIS AGREEMENT AND MAY NOT USE THE SERVICES.
+            </p>
+            <p>
+                POSLite Inc, reserves the right to amend these Terms at any time, effective upon the posting of such modified Terms on the Website. POSLite will make every effort to communicate these changes to You via the Website and also via email. It is likely that the Terms will change over time. It is Your obligation to ensure that You have read and understood the most recent Terms available on the Website. They replace any prior agreement(s) between You and POSLite. 
+            </p>
+            <h3>Contract Formation</h3>
+            <p>By ticking the “I agree” box or pressing the “Sign up” button when signing up for trial version or by using the POSLite Software Application (including but not limited to the downloading of said application) or the POSLite Online Services, you confirm that any registration information that you submit to POSLite is true, accurate and complete, that you will update such information in order to keep it current, and that you agree to the terms and conditions of this Agreement and the POSLite Privacy Policy.  </p>
+            <h3>Changes of Agreement</h3>
+            <p>POSLite Inc, may make changes to this Agreement at its sole discretion. Any material changes will be communicated to you and your acceptance of and / or continued use of POSLite Software Application or the POSLite Online Services after such notification of changes to this Agreement will constitute your acceptance of such changes.</p>
+            <h3>Grant of License</h3>
+            <p>You are granted a limited, non-exclusive, revocable license to make use of the POSLite Software Application (including a right to download said application). You do not have a right to transfer or sublicense your rights under this Agreement.</p>
+            <h3>Purchase of POSLite Software</h3>
+            <p>If you agree to pay the fee for access to the applicable POSLite Software Application, such fee will be charged by the company designated by POSLite Inc, in accordance with the payment method you have chosen for your purchase. If you are paying by credit or debit card, by designating a card to be billed, you confirm that you are authorised to make such purchase and that you are the holder of such card (i.e. that the card is issued in your name). All prices quoted are exclusive of VAT (where applicable) and other applicable taxes and fees. POSLite Inc, accepts a variety of different payment methods, so please check with the sales team for the best way for you to pay.</p>
+            <h3>Offline Mode POSLite </h3>
+            <p>The offline mode of POSLite Inventory Management System permits you to run the software in offline mode as long as you retain a valid license. You are permitted to register and use your purchased license on one (1) personal computer.  POSLite license are for one time use only and cannot be registered for multiple computers. If you wish to use POSLite for multiple computers, you can do so by local area network setup, the number of users / computers that can access the system simultaneously will depends on the software package. You may use this setup anytime by requesting assistance to POSLite Inc,</p>
+            <h3>Online Mode </h3>
+            <p>In POSLite Online Mode, all files are stored in our secure server with 99% uptime and 300% faster SSD storage. All information that stored in the system are secured and password are encrypted in the database. Onlime mode permits you to use the software at any computer as long as you provide your username and password to access the system. The number of users in the system depends on the software package. You can upgrade the number of users anytime by requesting at POSLite Inc, charges may apply.</p>
+            <h3>Prices</h3>
+            <p>POSLite Inc, may change the price for the POSLite Application and its Online Services from time to time. In respect of the POSLite Application, such changed price will take effect after the expiry of the then current paid for period (i.e. the term that you have already paid for).  Your continued use of POSLite Application after the communication of such price change to you constitutes an acceptance of such new price.</p>
+            <h3>Support & Maintenance</h3>
+            <p>POSLite Inc, provides support and maintenance for POSLite software.  1 year free support is credited upon purchasing a license.  The customer can then request for support anytime at POSLite Inc,. For the next year support and maintenance may cost per hour with the agreed price.</p>
+            <h3>Customer Support</h3>
+            <p>If you have any questions concerning POSLite Software Application please contact POSLite help line by visiting our Facebook fan page @poslitesoftware.</p>
+            <h3>Back up of Data</h3>
+            <p>You must maintain copies of all Data inputted into the software. POSLite adheres to its best practice policies and procedures to prevent data loss, including a frequent system data back-up regime, but does not make any guarantees that there will be no loss of Data. POSLite expressly excludes liability for any loss of Data no matter how caused. The POSLite offline mode includes a backup feature. You are responsible to backup all data in the software using the backup features.</p>
+            <h3>No Warranty</h3>
+            <p>The use of the POSLite software Application and POSlite online service is at your own risk.  To the fullest extent possible under applicable law, POSLite Inc, gives no warranty, express or implied, as to the quality, content and availability or fitness for a specific purpose of the POSlite Software Application or the POSLite Software Online Services. As with any purchase of a product or service through any medium or in any environment, you should use your judgment and exercise caution where appropriate. No advice or information whether oral or in writing obtained by you from POSLite Inc, shall create any warranty on behalf of POSLite Inc, in this regard.</p>
+            <h3>Restriction of Use</h3>
+            <p>For the avoidance of doubt, you agree that you may not (without limitation):</p>
+            <p>copy, reproduce, record, make available to the public or otherwise use any part of the Content POSLite Software Application or the POSLite Online Service or its content (including but not limited to files, images and text) in a manner not expressly permitted under this Agreement;</p>
+            <p>sell or attempt to sell any invite to access the POSLite Software Application or POSLite Online Services, or resell any code used to access the POSLite Application or POSLite Online Services;</p>
+            <p>provide your profile information to any other person or use any other person’s profile information;</p>
+            <p>reverse-engineer, decompile, disassemble, modify or create derivative works based on the POSLite Software Application or the POSLite Online Services or any part thereof;</p>
+            <p>circumvent any technology used by POSLite Inc, its licensors, or any third party to protect content accessible through the POSLite Software Application and POSLite Online Services;</p>
+            <p>rent or lease any part of the POSLite Software Application or the POSLite Online Services;</p>
+            <p>use the POSLite Software Application or the POSLite Online Services in a way that violates the terms of this Agreement;</p>
+            <p>circumvent any territorial restrictions applied by POSLite Inc,</p>
+            <p>artificially manipulate the POSLite Software Application or the POSLite Online Services by using a script or other automated process;</p>
+            <p>import any local files which you have not legally acquired into the POSLite Software Application.</p>
+            <p>In addition to the above, you agree to take all reasonable care to prevent unauthorised use of the POSLite Software Application and the POSLite Online Services and its content.</p>
 
-<p>Welcome to POSLite!</p>
+            <h3>Terms</h3>
+            <p>This Agreement will become effective in relation to you when you have ticked the “Register” box when signing up for trial or when you click ‘Agree’ during installation of the POSLite Software Application and will remain effective until terminated by you or POSLite Inc.</p>
+            <h3>Intellectual Property</h3>
+            <p>POSLite Inc, Limited respects intellectual property rights, and expects you to do the same. Please note therefore that the POSLite Software Application and the POSLite Online Services specific content provided through the POSLite Online Service is the property of POSLite Inc, and protected by intellectual property rights (including but not limited to copyright) and that you do not have a right to use the POSLite Software Application or the POSLite Online Services (including but not limited to its content), or any documentation (including but not limited to these terms and conditions) in any manner not covered by the Agreement. Furthermore, you must not infringe any third party’s intellectual property rights in using the POSLite Online Services, which means that (for example) you may not import or copy any files which you have not legally acquired and have the right to so import or copy into the POSLite Software Application.  Further, you may not remove or alter any copyright, trademark or other intellectual property notices contained on or provided through the POSLite Software Application or the POSLite Online Services.</p>
+            <h3>Privacy</h3>
 
-<p>These POSLite Software Terms of Service (these “Terms”) describe your rights and responsibilities as a customer of our Products. As applicable to the POSLite Software.</p>
-
+            <p>You agree that POSLite Inc has a right to collect and process your personal information in accordance with the POSLite Inc Privacy Policy.</p>
+        </section>
+    </article>
  
-
-<h3><strong>Cookies</strong></h3>
-
-<p>We employ the use of cookies. By accessing POSLite, you agreed to use cookies in agreement with the POSLite Inc.'s Privacy Policy.</p>
-
-<p>Most interactive websites use cookies to let us retrieve the user’s details for each visit. Cookies are used by our website to enable the functionality of certain areas to make it easier for people visiting our website. Some of our affiliate/advertising partners may also use cookies.</p>
-
-<h3><strong>License</strong></h3>
-
-<p>Unless otherwise stated, POSLite Inc. and/or its licensors own the intellectual property rights for all material on POSLite. All intellectual property rights are reserved. You may access this from POSLite for your own personal use subjected to restrictions set in these terms and conditions.</p>
-
-<p>You must not:</p>
-<ul>
-    <li>Republish material from POSLite</li>
-    <li>Sell, rent or sub-license material from POSLite</li>
-    <li>Reproduce, duplicate or copy material from POSLite</li>
-    <li>Redistribute content from POSLite</li>
-</ul>
-
-<p>This Agreement shall begin on the date hereof.</p>
-
-<p>Parts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. POSLite Inc. does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of POSLite Inc.,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, POSLite Inc. shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.</p>
-
-<p>POSLite Inc. reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive or causes breach of these Terms and Conditions.</p>
-
-<p>You warrant and represent that:</p>
-
-<ul>
-    <li>You are entitled to post the Comments on our website and have all necessary licenses and consents to do so;</li>
-    <li>The Comments do not invade any intellectual property right, including without limitation copyright, patent or trademark of any third party;</li>
-    <li>The Comments do not contain any defamatory, libelous, offensive, indecent or otherwise unlawful material which is an invasion of privacy</li>
-    <li>The Comments will not be used to solicit or promote business or custom or present commercial activities or unlawful activity.</li>
-</ul>
-
-<p>You hereby grant POSLite Inc. a non-exclusive license to use, reproduce, edit and authorize others to use, reproduce and edit any of your Comments in any and all forms, formats or media.</p>
-
-<h3><strong>Hyperlinking to our Content</strong></h3>
-
-<p>The following organizations may link to our Website without prior written approval:</p>
-
-<ul>
-    <li>Government agencies;</li>
-    <li>Search engines;</li>
-    <li>News organizations;</li>
-    <li>Online directory distributors may link to our Website in the same manner as they hyperlink to the Websites of other listed businesses; and</li>
-    <li>System wide Accredited Businesses except soliciting non-profit organizations, charity shopping malls, and charity fundraising groups which may not hyperlink to our Web site.</li>
-</ul>
-
-<p>These organizations may link to our home page, to publications or to other Website information so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement or approval of the linking party and its products and/or services; and (c) fits within the context of the linking party’s site.</p>
-
-<p>We may consider and approve other link requests from the following types of organizations:</p>
-
-<ul>
-    <li>commonly-known consumer and/or business information sources;</li>
-    <li>dot.com community sites;</li>
-    <li>associations or other groups representing charities;</li>
-    <li>online directory distributors;</li>
-    <li>internet portals;</li>
-    <li>accounting, law and consulting firms; and</li>
-    <li>educational institutions and trade associations.</li>
-</ul>
-
-<p>We will approve link requests from these organizations if we decide that: (a) the link would not make us look unfavorably to ourselves or to our accredited businesses; (b) the organization does not have any negative records with us; (c) the benefit to us from the visibility of the hyperlink compensates the absence of POSLite Inc.; and (d) the link is in the context of general resource information.</p>
-
-<p>These organizations may link to our home page so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement or approval of the linking party and its products or services; and (c) fits within the context of the linking party’s site.</p>
-
-<p>If you are one of the organizations listed in paragraph 2 above and are interested in linking to our website, you must inform us by sending an e-mail to POSLite Inc.. Please include your name, your organization name, contact information as well as the URL of your site, a list of any URLs from which you intend to link to our Website, and a list of the URLs on our site to which you would like to link. Wait 2-3 weeks for a response.</p>
-
-<p>Approved organizations may hyperlink to our Website as follows:</p>
-
-<ul>
-    <li>By use of our corporate name; or</li>
-    <li>By use of the uniform resource locator being linked to; or</li>
-    <li>By use of any other description of our Website being linked to that makes sense within the context and format of content on the linking party’s site.</li>
-</ul>
-
-<p>No use of POSLite Inc.'s logo or other artwork will be allowed for linking absent a trademark license agreement.</p>
- 
-
-<h3><strong>Reservation of Rights</strong></h3>
-
-<p>We reserve the right to request that you remove all links or any particular link to our Website. You approve to immediately remove all links to our Website upon request. We also reserve the right to amen these terms and conditions and it’s linking policy at any time. By continuously linking to our Website, you agree to be bound to and follow these linking terms and conditions.</p>
-
-<h3><strong>Disclaimer</strong></h3>
-
-<p>To the maximum extent permitted by applicable law, we exclude all representations, warranties and conditions relating to our website and the use of this website. Nothing in this disclaimer will:</p>
-
-<ul>
-    <li>limit or exclude our or your liability for death or personal injury;</li>
-    <li>limit or exclude our or your liability for fraud or fraudulent misrepresentation;</li>
-    <li>limit any of our or your liabilities in any way that is not permitted under applicable law; or</li>
-    <li>exclude any of our or your liabilities that may not be excluded under applicable law.</li>
-</ul>
-
-<p>The limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty.</p>
-
-<p>As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.</p>
-    </div>
 </main>
  
 
