--- a/src/app/terms-conditions/terms-conditions.component.css
+++ b/src/app/terms-conditions/terms-conditions.component.css
@@ -4,5 +4,15 @@ main {
 }
 
 h1 {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+}
+
+h3 {
+    margin-bottom: 15px;
+    line-height: 2;
+}
+
+p {
+    font-size: 16px;
+    line-height: 1.5;
 }
