update terms and conditions

--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -551,13 +551,13 @@ input.checkbox:checked:after {
 }
 
 /*-- responsive-design --*/
-@media(max-width:1440px) {
+@media only screen and (max-width:1440px) {
   input[type="text"], input[type="email"], input[type="password"] {
     width: 94%;
   }
 }
 
-@media(max-width:1366px) {
+@media only screen and (max-width:1366px) {
   h1 {
     font-size: 2.6em;
   }
@@ -575,25 +575,25 @@ input.checkbox:checked:after {
   }
 }
 
-@media(max-width:1280px) {
+@media only screen and (max-width:1280px) {
   .main-agileinfo {
     width: 40%;
   }
 }
 
-@media(max-width:1080px) {
+@media only screen and (max-width:1080px) {
   .main-agileinfo {
     width: 46%;
   }
 }
 
-@media(max-width:1024px) {
+@media only screen and (max-width:1024px) {
   .main-agileinfo {
     width: 49%;
   }
 }
 
-@media(max-width:991px) {
+@media only screen and (max-width:991px) {
   h1 {
     font-size: 2.4em;
   }
@@ -603,7 +603,7 @@ input.checkbox:checked:after {
   }
 }
 
-@media(max-width:900px) {
+@media only screen and (max-width:900px) {
   .main-agileinfo {
     width: 58%;
   }
@@ -613,25 +613,25 @@ input.checkbox:checked:after {
   }
 }
 
-@media(max-width:800px) {
+@media only screen and (max-width:800px) {
   h1 {
     font-size: 2.2em;
   }
 }
 
-@media(max-width:736px) {
+@media only screen and (max-width:736px) {
   .main-agileinfo {
     width: 62%;
   }
 }
 
-@media(max-width:667px) {
+@media only screen and (max-width:667px) {
   .main-agileinfo {
     width: 67%;
   }
 }
 
-@media(max-width:600px) {
+@media only screen and (max-width:600px) {
   .agileits-top {
     padding: 2.2em;
   }
@@ -650,7 +650,7 @@ input.checkbox:checked:after {
   }
 }
 
-@media(max-width:568px) {
+@media only screen and (max-width:568px) {
   .main-agileinfo {
     width: 75%;
   }
@@ -660,7 +660,7 @@ input.checkbox:checked:after {
   }
 }
 
-@media(max-width:480px) {
+@media only screen and (max-width:480px) {
   h1 {
     font-size: 1.8em;
     letter-spacing: 3px;
@@ -679,7 +679,7 @@ input.checkbox:checked:after {
   }
 }
 
-@media(max-width:414px) {
+@media only screen and (max-width:414px) {
   h1 {
     font-size: 1.8em;
     letter-spacing: 2px;
@@ -717,7 +717,7 @@ input.checkbox:checked:after {
   }
 }
 
-@media(max-width:384px) {
+@media only screen and (max-width:384px) {
   .main-agileinfo {
     width: 88%;
   }
@@ -727,13 +727,13 @@ input.checkbox:checked:after {
   }
 }
 
-@media(max-width:375px) {
+@media only screen and (max-width:375px) {
   .agileits-top p {
     letter-spacing: 0px;
   }
 }
 
-@media(max-width:320px) {
+@media only screen and (max-width:320px) {
   .main-w3layouts {
     padding: 1.5em 0 0;
   }
@@ -784,5 +784,4 @@ input.checkbox:checked:after {
     padding: 1em 0 0;
   }
 }
-
-@media only screen and (max-width: )
+ 
