--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -118,10 +118,11 @@
 
     .blog-wrapper {
         padding: 40px;
-        background-color: #fff;
+        background-color: #f1f1f1;
         border-bottom:solid 1px #f4f4f5;
         border-radius: 3px;
         margin-bottom: 20px;
+        border: solid 1px #f2f2f2;
     }
 
     .blog-wrapper figure {
