--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,7 +59,7 @@
             <div class=" col-lg-11 " id="pc-wrapper">
                 <header> 
                     
-                    <h1>Make Things Easier with the hottest Inventory Software In The Market</h1>  
+                    <h1>Focus on what truly matters <br>Growing your Business</h1>  
                 </header>
                 <div id="header-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner"> 
@@ -81,8 +81,10 @@
 <section id="features">
     <div class="container  ">
         <header>
-            <h2 class="text-center section-header  wow bounceInUp" data-wow-delay="0.5s">FEATURES</h2> 
-            <p class="lead text-center wow fadeIn" data-wow-delay="1s" style="margin-top: -20px;margin-bottom: 60px;border-bottom: solid 1px #333;padding-bottom: 20px;max-width: 880px;margin: -20px auto 60px auto;">POSLite has all the core functions to run your business efficiently</p>
+            <h2 class="text-center section-header  wow bounceInUp" data-wow-delay="0.5s">Features</h2> 
+            <p class="lead text-center wow fadeIn" data-wow-delay="1s">
+                POSLite helps you save time and eliminate human errors by automating repetitive task and enables you to make smart decisions. After all your business needs to work for you. Not you working for you business. 
+            </p>
         </header> 
         <div class="row wow fadeIn" data-wow-delay="1.5s">  
             <article class="col-lg-4 feature">
@@ -428,7 +430,7 @@
     
                             <div class="carousel-inner">
                                 <div class="row">
-                                    <div class="col-md-12">
+                                    <div class="col-lg-12">
                                         <div 
                                             *ngFor="let review of reviews; first as isFirst;index as i"
                                             class="carousel-item" 
@@ -476,7 +478,7 @@
                 
                 <!--BLOCK ROW START-->
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                     
                         <!--PRICE CONTENT START-->
                         <div class="generic_content clearfix">
@@ -533,7 +535,7 @@
                             
                     </div>
                     
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                      
                         <div class="generic_content active clearfix">
                              
@@ -576,7 +578,7 @@
                         </div> 
                             
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                      
                         <div class="generic_content clearfix">
                              
