--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -45,6 +45,16 @@
 	margin-bottom: 40px;
 }
 
+#features header p {
+    margin-top: -20px;
+    margin-bottom: 60px;
+    border-bottom: solid 1px #333;
+    padding-bottom: 20px;max-width: 880px;
+    margin: -20px auto 60px auto;
+    line-height: 1.625em;
+
+}
+
 #features .feature {
 	padding: 20px;
 }
@@ -52,7 +62,8 @@
 .feature-icon {  
 	 font-size: 34px !important;  
 	 box-sizing: border-box;  
-	 opacity: 0.9;
+     opacity: 0.9;
+     color: #337ab7;
 
 }
 
@@ -116,12 +127,11 @@
     padding: 20px 23px; 
 }
 .block-text a {
- color: #7d4702;
+ color: #222;
     font-size: 25px;
     font-weight: bold;
     line-height: 21px;
-    text-decoration: none;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    text-decoration: none; 
 }
 .mark {
     padding: 12px 0;background:none;
@@ -164,8 +174,7 @@
     color: #56CCF2;
     display: block;
     font-size: 14px;
-    margin-top: 3px;
-    text-decoration: underline;
+    margin-top: 3px; 
 }
 
 .person-text img {
@@ -343,6 +352,7 @@ textarea {
               0 2px 10px 0 rgba(0,0,0,0.07);
     -webkit-transition: all 300ms ease;
     transition: all 300ms ease;
+    border:0;
 }
 
 .submit-btn:hover {
