fix success message grammar

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -125,7 +125,7 @@
 
                 <div *ngIf="success">
                     <p class="lead">Thank you for signing up!</p>
-                    <p>Please check your inbox a POSLite trial version is sent on your email.</p>
+                    <p>POSLite trial has been sent to your email</p>
                      
                 </div>
             </div>
