--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -83,7 +83,7 @@
         <header>
             <h2 class="text-center section-header  wow bounceInUp" data-wow-delay="0.5s">Features</h2> 
             <p class="lead text-center wow fadeIn" data-wow-delay="1s">
-                POSLite helps you save time and eliminate human errors by automating repetitive task and enables you to make smart decisions. After all your business needs to work for you. Not you working for you business. 
+                POSLite helps you save time and eliminate human errors by automating repetitive tasks and enables you to make smart decisions. After all, your business needs to work for you. Not you, working for your business.
             </p>
         </header> 
         <div class="row wow fadeIn" data-wow-delay="1.5s">  
