--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -527,7 +527,7 @@
                             </div> 
                             <div class="generic_price_btn clearfix"> 
                                
-                                <a class="" routerLink="/signup" onclick="window.scrollTo(0, 0)">Free Trial</a>
+                                <a class="buynow" (click)="buyNow(0)">Buy Now</a>
                                 
                             </div> 
                             
@@ -571,7 +571,7 @@
                             </div> 
                             <div class="generic_price_btn clearfix"> 
                                  
-                                <a class="" routerLink="/signup" onclick="window.scrollTo(0, 0)">Free Trial</a>
+                                <a class="buynow" (click)="buyNow(1)">Buy Now</a>
                              
                             </div> 
                             
@@ -614,7 +614,7 @@
                             </div> 
                             <div class="generic_price_btn clearfix"> 
                                  
-                                <a class="" routerLink="/signup" onclick="window.scrollTo(0, 0)">Free Trial</a> 
+                                <a class="buynow" (click)="buyNow(2)">Buy Now</a> 
                             </div> 
                         </div> 
                             
